read more modified

--- a/index.html
+++ b/index.html
@@ -1287,11 +1287,13 @@
                                                     line-height: 1.75; position: relative; top: -50px;">Indulge in the flavors of our restaurant as seen through the discerning eyes of Toronto Life. Explore their expert 
                                                     reviews, savoring the delectable insights and culinary critiques that showcase our finest dishes. 
                         </blockquote>
-                        <h3 class="item-name"><a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/" target="_blank" style="cursor:pointer;
-                            color:white;
-                            position:relative; top: -60px;
-                            text-decoration:underline;">Read more</a>
-                        </h3>
+                        
+                        <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-1" style="position:relative; top: -60px;">
+                            <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
+                            <div class="more-button-txt-center more-button-txt-center-close">
+                                <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
+                            </div>
+                        </div>
                         <!-- section title end -->
                     </div>
                     <!-- col end -->
@@ -1349,12 +1351,12 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- button start -->
-                                    <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-1">
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-1">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
                                             <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- button end -->
                                     <!-- divider start -->
                                     <div class="divider-l"></div>
@@ -1401,12 +1403,12 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- button start -->
-                                    <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-2">
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-2">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
                                             <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- button end -->
                                     <!-- divider start -->
                                     <div class="divider-l"></div>
@@ -1463,12 +1465,12 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- button start -->
-                                    <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-3">
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-3">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
                                             <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- button end -->
                                     <!-- divider start -->
                                     <div class="divider-l"></div>
@@ -1515,12 +1517,12 @@
                                     <div class="divider-l"></div>
                                     <!-- divider end -->
                                     <!-- button start -->
-                                    <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-4">
+                                    <!-- <div class="more-wraper-center" data-toggle="modal" data-target="#newsModal-4">
                                         <div class="more-button-bg-center more-button-bg-center-dark more-button-bg-center-dark-close more-button-circle"></div>
                                         <div class="more-button-txt-center more-button-txt-center-close">
                                             <a href="https://torontolife.com/food/whats-on-the-menu-at-aamara-indian-st-clair-west/"><span>Read More</span></a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- button end -->
                                     <!-- divider start -->
                                     <div class="divider-l"></div>
