images fixed mobile view

--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                                     creating a drink fit for royalty.</p>
                                 <!-- section txt end -->
                             </div>
-                            <div class="item">
+                            <div class="item" >
                                 <div class="item-wrapper">
                                     <!-- items img start -->
                                     <div class="menu-img">
@@ -1315,7 +1315,7 @@
                     <!-- halve start -->
                     <div class="halves">
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-1" >
+                        <div >
                             <img src="img/news/1.jpg"  >
                         </div>
                         <!-- halve IMG end -->
@@ -1420,7 +1420,7 @@
                         </div>
                         <!-- halve TXT end -->
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-2">
+                        <div>
                             <img src="img/news/2.jpg" >
                         </div>
                         <!-- halve IMG end -->
@@ -1429,7 +1429,7 @@
                     <!-- halve start -->
                     <div class="halves">
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-3">
+                        <div>
                             <img src="img/news/3.jpg" >
                         </div>
                         <!-- halve IMG end -->
@@ -1534,7 +1534,7 @@
                         </div>
                         <!-- halve TXT end -->
                         <!-- halve IMG start -->
-                        <div class="half news-bg-all news-bg-4">
+                        <div>
                             <img src="img/news/4.jpg" >
                         </div>
                         <!-- halve IMG end -->
