cocktail images added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="reservation-button-container text-center visible-xs" style="z-index: 2;">
                     <button id="reservation-button-hide-mobile"  type="submit" class="logo-dark reservation-button-nav-bar" data-toggle="modal" data-target="#reservation-modal">Reservations</button>
                 </div>
-                    <div class="collapse navbar-collapse" id="navbar-collapse" style="padding-right: 80px; z-index: 2; height: 1px;">
+                    <div class="collapse navbar-collapse" id="navbar-collapse" style=" z-index: 2; height: 1px;">
                         <!-- menu start -->
                         <ul class="nav navbar-nav">
                             <li>
@@ -707,7 +707,7 @@
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
                                             <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <img src="img/menu/chennai.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -767,7 +767,7 @@
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
                                             <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <img src="img/menu/goa.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -796,7 +796,7 @@
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
                                             <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <img src="img/menu/jaipur.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -827,7 +827,7 @@
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
                                             <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <img src="img/menu/kolkata.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -857,7 +857,7 @@
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
                                             <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <img src="img/menu/hyderabad.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -888,7 +888,7 @@
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
                                             <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <img src="img/menu/bengaluru.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
