--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="navbar-header" style="display: flex; align-items: center; width: 100%;">
                         <!-- navigation button start -->
                         
-                            <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar-collapse" data-toggle="collapse" type="button" style="margin-right: auto;">
+                            <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#navbar-collapse" data-toggle="collapse" type="button" style="box-sizing: border-box;padding-top:6%;margin-right:140px;">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -51,7 +51,7 @@
                         
                         <!-- navigation button end -->
                         <!-- logo mobile start -->
-                        <div class="navbar-brand hidden-sm hidden-md hidden-lg logo active" href="#" style="margin-left: auto; margin-right: auto;">
+                        <div class="navbar-brand hidden-sm hidden-md hidden-lg logo active" href="#" style="box-sizing: border-box;margin-left: auto; margin-right: auto;padding-right: 50px;">
                             <!-- logo light start -->
                             <img alt="Logo" class="logo-light" src="img/logo-light.png" style="max-height: 50px;">
                             <!-- logo light end -->
