mobile view fixed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <!-- logo mobile end -->
                     </div>
-                    <div class="reservation-button-container text-center visible-xs" style="z-index: 2;">
+                    <div class="reservation-button-container text-center visible-xs" style="z-index: 2;padding-right: 15px;">
                         <button id="reservation-button-hide-mobile" type="submit" class="logo-dark reservation-button-nav-bar" data-toggle="modal" data-target="#reservation-modal">Reservations</button>
                     </div>
                     <div class="collapse navbar-collapse" id="navbar-collapse" style="z-index: 2; text-align: center;">
