--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                         <!-- menu start -->
                         <ul class="nav navbar-nav" style="display: flex; justify-content: space-between; width: 100%; padding: 0; margin: 0;">
                             <li style="flex-grow: 1; text-align: center;">
-                                <a href="#home" style="padding: 15px 10px;">Home</a>
+                                <a href="#home" style="padding:0">Home</a>
                             </li>
                             <li style="flex-grow: 1; text-align: center;">
-                                <a href="#about" style="padding: 15px 10px;">About</a>
+                                <a href="#about" style="padding:0">About</a>
                             </li>
                             <li style="flex-grow: 1; text-align: center;">
-                                <a href="#works" style="padding: 15px 10px;">Menu</a>
+                                <a href="#works" style="padding: 0">Menu</a>
                             </li>
                             <li class="hidden-xs" style="flex-grow: 0; display: flex; justify-content: center; align-items: center;">
                                 <!-- logo desktop start -->
@@ -89,13 +89,13 @@
                                 <!-- logo desktop end -->
                             </li>
                             <li style="flex-grow: 1; text-align: center;">
-                                <a href="#services" style="padding: 15px 10px;">Services</a>
+                                <a href="#services" style="padding: 0;">Services</a>
                             </li>
                             <li style="flex-grow: 1; text-align: center;">
-                                <a href="#blog" style="padding: 15px 10px;">Testimonials</a>
+                                <a href="#blog" style="padding: 0;">Testimonials</a>
                             </li>
                             <li style="flex-grow: 1; text-align: center;">
-                                <a href="#contact" style="padding: 15px 10px;">Contact</a>
+                                <a href="#contact" style="padding: 0;">Contact</a>
                             </li>
                         </ul>
                         <!-- menu end -->
