mobile view fixed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="reservation-button-container text-center visible-xs" style="z-index: 2;padding-left: 40px;">
                         <button id="reservation-button-hide-mobile" type="submit" class="logo-dark reservation-button-nav-bar" data-toggle="modal" data-target="#reservation-modal" style="margin-right: 15px;">Reservations</button>
                     </div>
-                    <div class="collapse navbar-collapse" id="navbar-collapse" style="z-index: 2; text-align: center;margin-left: 50px;">
+                    <div class="collapse navbar-collapse" id="navbar-collapse" style="z-index: 3; text-align: center;margin-left: 50px;">
                         <!-- menu start -->
                         <ul class="nav navbar-nav" style="display: flex; justify-content: space-between; width: 100%; padding: 0; margin: 0;">
                             <li style="flex-grow: 1; text-align: center;">
@@ -79,7 +79,7 @@
                             </li>
                             <li class="hidden-xs" style="flex-grow: 0; display: flex; justify-content: center; align-items: center;">
                                 <!-- logo desktop start -->
-                                <a class="logo" href="#" style="padding: 0; display: flex; align-items: center;">
+                                <a class="logo" href="#" style="padding: 0; display: flex; align-items: center;z-index: 3;">
                                     <!-- logo light start -->
                                     <img alt="Logo" class="logo-light" src="img/logo-light.png" style="max-height: 50px;">
                                     <!-- logo light end -->
