--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <div class="reservation-button-container text-center visible-xs" style="z-index: 2;padding-left: 40px;">
                         <button id="reservation-button-hide-mobile" type="submit" class="logo-dark reservation-button-nav-bar" data-toggle="modal" data-target="#reservation-modal" style="margin-right: 18px;">Reservations</button>
                     </div>
-                    <div class="collapse navbar-collapse" id="navbar-collapse" style="z-index: 3; text-align: center;margin-left: 50px;">
+                    <div class="collapse navbar-collapse" id="navbar-collapse" style="z-index: 2; text-align: center;margin-left: 50px;">
                         <!-- menu start -->
-                        <ul class="nav navbar-nav" style="display: flex; justify-content: space-between; width: 100%; padding: 0; margin: 0;">
+                        <ul class="nav navbar-nav" style="display: flex; justify-content: space-between; width: 100%; padding-left:20px; margin: 0;">
                             <li style="flex-grow: 1; text-align: center;">
                                 <a href="#home" style="padding:0">Home</a>
                             </li>
@@ -145,6 +145,7 @@
                 .navbar-fixed-top.shrink .navbar-brand img {
                     max-height: 30px;
                 }
+                
             }
         </style>
         
