--- a/index.html
+++ b/index.html
@@ -713,8 +713,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/chennai.jpg" title="">
+                                            <img src="img/menu/chennai.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -773,8 +773,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/goa.jpg" title="">
+                                            <img src="img/menu/goa.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -802,8 +802,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/jaipur.jpg" title="">
+                                            <img src="img/menu/jaipur.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -833,8 +833,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/kolkata.jpg" title="">
+                                            <img src="img/menu/kolkata.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -863,8 +863,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/hyderabad.jpg" title="">
+                                            <img src="img/menu/hyderabad.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -894,8 +894,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/bengaluru.jpg" title="">
+                                            <img src="img/menu/bengaluru.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
