home images compressed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <!-- style start -->
     <link href="css/plugins.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/style2.css" media="all" rel="stylesheet" type="text/css">
     <!-- style end -->
     <!-- google fonts start -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CPlayfair+Display:500,600,700,800,900" rel="stylesheet" type="text/css">
