--- a/index2.html
+++ b/index2.html
@@ -50,10 +50,10 @@
                         <!-- logo mobile start -->
                         <div class="navbar-brand hidden-sm hidden-md hidden-lg logo active" href="#">
                             <!-- logo light start -->
-                            <img alt="Logo" class="logo-light" src="img/logo-light.png">
+                            <img alt="Logo" class="logo-light" src="img/logo-light.png" style="z-index: 3;">
                             <!-- logo light end -->
                             <!-- logo dark start -->
-                            <img alt="Logo" class="logo-dark" src="img/logo-dark.png">
+                            <img alt="Logo" class="logo-dark" src="img/logo-dark.png" style="z-index: 3;">
                             <!-- logo dark end -->
                         </div>
                         <!-- logo mobile end -->
@@ -61,9 +61,16 @@
                     <div class="reservation-button-container text-center visible-xs" style="z-index: 2;">
                     <button id="reservation-button-hide-mobile"  type="submit" class="logo-dark reservation-button-nav-bar" data-toggle="modal" data-target="#reservation-modal">Reservations</button>
                 </div>
-                    <div class="collapse navbar-collapse" id="navbar-collapse" style="padding-right: 80px; z-index: 2; height: 1px;">
+                    <div class="collapse navbar-collapse" id="navbar-collapse" style="z-index: 2;">
+
                         <!-- menu start -->
                         <ul class="nav navbar-nav">
+                            <li class="hidden-xs">
+                                <a></a>
+                            </li>
+                            <li class="hidden-xs">
+                                <a></a>
+                            </li>
                             <li>
                                 <a href="#home">Home</a>
                             </li>
@@ -706,8 +713,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/chennai.jpg" title="">
+                                            <img src="img/menu/chennai.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -732,42 +739,14 @@
                             </div>
                             
 
+                            
                             <div class="item">
                                 <div class="item-wrapper">
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <!-- items img end -->
-                                    <!-- section title start -->
-                                    <h3 class="item-name">MUMBAI MONSOON </h3>
-                                    <span class="item-divider"></span>
-                                    <span class="item-price">$23</span>
-                                    <!-- section title end -->
-                                </div>
-                                <!-- divider start -->
-                                <div class="divider-m"></div>
-                                <!-- divider end -->
-                                <!-- section txt start -->
-                                <p class="item-description">Inspired by the monsoon
-                                    rains that bring relief to the city of
-                                    Mumbai, this cocktail combines
-                                    refreshing mint and zesty nutmeg to
-                                    bring out the refreshing essence of
-                                    the air after a rain shower.</p>
-                                <!-- section txt end -->
-                            </div>
-                            <div class="item">
-                                <div class="item-wrapper">
-                                    <!-- items img start -->
-                                    <div class="menu-img">
-                                        <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/goa.jpg" title="">
+                                            <img src="img/menu/goa.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -795,8 +774,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/jaipur.jpg" title="">
+                                            <img src="img/menu/jaipur.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -826,8 +805,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/kolkata.jpg" title="">
+                                            <img src="img/menu/kolkata.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -856,8 +835,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/hyderabad.jpg" title="">
+                                            <img src="img/menu/hyderabad.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -887,8 +866,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/bengaluru.jpg" title="">
+                                            <img src="img/menu/bengaluru.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
@@ -911,6 +890,35 @@
                                     Tajin-seasoned rim, a homage to its
                                     diverse cultural zest, completes this
                                     kaleidoscopic libation.</p>
+                                <!-- section txt end -->
+                            </div>
+                            <div class="item">
+                                <div class="item-wrapper">
+                                    <!-- items img start -->
+                                    <div class="menu-img">
+                                        <div class="menu-img-inner">
+                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
+                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!-- items img end -->
+                                    <!-- section title start -->
+                                    <h3 class="item-name">MUMBAI MONSOON </h3>
+                                    <span class="item-divider"></span>
+                                    <span class="item-price">$23</span>
+                                    <!-- section title end -->
+                                </div>
+                                <!-- divider start -->
+                                <div class="divider-m"></div>
+                                <!-- divider end -->
+                                <!-- section txt start -->
+                                <p class="item-description">Inspired by the monsoon
+                                    rains that bring relief to the city of
+                                    Mumbai, this cocktail combines
+                                    refreshing mint and zesty nutmeg to
+                                    bring out the refreshing essence of
+                                    the air after a rain shower.</p>
                                 <!-- section txt end -->
                             </div>
                         </div>
