--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <!-- style start -->
     <link href="css/plugins.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/style2.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/style3.css" media="all" rel="stylesheet" type="text/css">
     <!-- style end -->
     <!-- google fonts start -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CPlayfair+Display:500,600,700,800,900" rel="stylesheet" type="text/css">
@@ -135,6 +135,48 @@
                             <!-- swiper wrapper start -->
                             <div class="swiper-wrapper">
                                 
+                                <!-- swiper slider item start -->
+                                <div class="swiper-slide">
+                                    <div class="swiper-slide-inner">
+                                        <!-- swiper slider item IMG start -->
+                                        <div class="swiper-slide-inner-bg-2 bg-img-2 overlay overlay-dark">
+                                        </div>
+                                        <!-- swiper slider item IMG end -->
+                                        <!-- swiper slider item txt start -->
+                                        <div class="swiper-slide-inner-txt">
+                                            <!-- section subtitle start -->
+                                            <div class="section-title section-title-home fadeIn-element">
+                                                <h2 class="section-title-line section-title-line-home">
+                                                    <!-- <span>Culinary &nbsp;Journey</span> -->
+                                                </h2>
+                                            </div>
+                                            <!-- section subtitle end -->
+                                            <!-- divider start -->
+                                            <div class="divider-m"></div>
+                                            <!-- divider end -->
+                                            <!-- section title start -->
+                                            <h1 class="hero-heading hero-heading-home fadeIn-element">
+                                                Fathers <span> Day! </span>
+                                            </h1>
+                                            <!-- section title end -->
+                                            <!-- divider start -->
+                                            <div class="divider-m"></div>
+                                            <!-- divider end -->
+                                            <!-- button start -->
+                                            <div class="more-wraper-center more-wraper-center-home fadeIn-element">
+                                                <a data-lity="" href="FathersDayIntro.mp4">
+                                                    <div class="more-button-bg-center more-button-circle"></div>
+                                                    <div class="more-button-txt-center">
+                                                        <span>Watch Video</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- button end -->
+                                        </div>
+                                        <!-- swiper slider item txt end -->
+                                    </div>
+                                </div>
+                                <!-- swiper slider item end -->
                                 
                                 <!-- swiper slider item start -->
                                 <div class="swiper-slide">
