cocktail image updated

--- a/index.html
+++ b/index.html
@@ -939,8 +939,8 @@
                                     <!-- items img start -->
                                     <div class="menu-img">
                                         <div class="menu-img-inner">
-                                            <a class="popup-photo" href="img/menu/222.jpg" title="">
-                                            <img src="img/menu/222.jpg" alt="Img"/>
+                                            <a class="popup-photo" href="img/menu/Mumbai.jpg" title="">
+                                            <img src="img/menu/Mumbai.jpg" alt="Img"/>
                                             </a>
                                         </div>
                                     </div>
