fathers day watch video moved down

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                         </div>
                                         <!-- swiper slider item IMG end -->
                                         <!-- swiper slider item txt start -->
-                                        <div class="swiper-slide-inner-txt">
+                                        <div class="swiper-slide-inner-txt" style="padding-top: 140px;">
                                             <!-- section subtitle start -->
                                             <div class="section-title section-title-home fadeIn-element">
                                                 <h2 class="section-title-line section-title-line-home">
@@ -155,9 +155,9 @@
                                             <div class="divider-m"></div>
                                             <!-- divider end -->
                                             <!-- section title start -->
-                                            <h1 class="hero-heading hero-heading-home fadeIn-element">
+                                            <!-- <h1 class="hero-heading hero-heading-home fadeIn-element">
                                                 Fathers <span> Day! </span>
-                                            </h1>
+                                            </h1> -->
                                             <!-- section title end -->
                                             <!-- divider start -->
                                             <div class="divider-m"></div>
