fathers day modified

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <!-- style start -->
     <link href="css/plugins.css" media="all" rel="stylesheet" type="text/css">
-    <link href="css/style2.css" media="all" rel="stylesheet" type="text/css">
+    <link href="css/style.css" media="all" rel="stylesheet" type="text/css">
     <!-- style end -->
     <!-- google fonts start -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900%7CPlayfair+Display:500,600,700,800,900" rel="stylesheet" type="text/css">
@@ -135,8 +135,8 @@
                             <!-- swiper wrapper start -->
                             <div class="swiper-wrapper">
                                 
-                                  <!-- swiper slider item start -->
-                                  <div class="swiper-slide">
+                                <!-- swiper slider item start -->
+                                <div class="swiper-slide">
                                     <div class="swiper-slide-inner">
                                         <!-- swiper slider item IMG start -->
                                         <div class="swiper-slide-inner-bg-2 bg-img-2 overlay overlay-dark">
@@ -145,17 +145,19 @@
                                         <!-- swiper slider item txt start -->
                                         <div class="swiper-slide-inner-txt">
                                             <!-- section subtitle start -->
-                                            <!-- <div class="section-title section-title-home fadeIn-element visible-xs" style="margin-top: 100px;">
+                                            <div class="section-title section-title-home fadeIn-element">
                                                 <h2 class="section-title-line section-title-line-home">
-                                                    <span>Special &nbsp;Occasion</span>
+                                                    <!-- <span>Culinary &nbsp;Journey</span> -->
                                                 </h2>
-                                            </div> -->
+                                            </div>
                                             <!-- section subtitle end -->
                                             <!-- divider start -->
                                             <div class="divider-m"></div>
                                             <!-- divider end -->
                                             <!-- section title start -->
-
+                                            <!-- <h1 class="hero-heading hero-heading-home fadeIn-element">
+                                                Fathers <span> Day! </span>
+                                            </h1> -->
                                             <!-- section title end -->
                                             <!-- divider start -->
                                             <div class="divider-m"></div>
@@ -163,10 +165,7 @@
                                             <!-- button start -->
                                             <div class="more-wraper-center more-wraper-center-home fadeIn-element">
                                                 <a data-lity="" href="FathersDayIntro.mp4">
-                                                    <div class="more-button-bg-center more-button-circle visible-xs" style="
-                                                    margin-top: 420px" ></div>
-                                                    <div class="more-button-bg-center more-button-circle hidden-xs" style="
-                                                    margin-top: -130px"></div>
+                                                    <div class="more-button-bg-center more-button-circle"></div>
                                                     <div class="more-button-txt-center">
                                                         <span>Watch Video</span>
                                                     </div>
