--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                             <!-- swiper wrapper start -->
                             <div class="swiper-wrapper">
                                 
-                                <!-- swiper slider item start -->
-                                <div class="swiper-slide">
+                                  <!-- swiper slider item start -->
+                                  <div class="swiper-slide">
                                     <div class="swiper-slide-inner">
                                         <!-- swiper slider item IMG start -->
                                         <div class="swiper-slide-inner-bg-2 bg-img-2 overlay overlay-dark">
@@ -145,19 +145,17 @@
                                         <!-- swiper slider item txt start -->
                                         <div class="swiper-slide-inner-txt">
                                             <!-- section subtitle start -->
-                                            <div class="section-title section-title-home fadeIn-element">
+                                            <!-- <div class="section-title section-title-home fadeIn-element visible-xs" style="margin-top: 100px;">
                                                 <h2 class="section-title-line section-title-line-home">
-                                                    <!-- <span>Culinary &nbsp;Journey</span> -->
+                                                    <span>Special &nbsp;Occasion</span>
                                                 </h2>
-                                            </div>
+                                            </div> -->
                                             <!-- section subtitle end -->
                                             <!-- divider start -->
                                             <div class="divider-m"></div>
                                             <!-- divider end -->
                                             <!-- section title start -->
-                                            <!-- <h1 class="hero-heading hero-heading-home fadeIn-element">
-                                                Fathers <span> Day! </span>
-                                            </h1> -->
+
                                             <!-- section title end -->
                                             <!-- divider start -->
                                             <div class="divider-m"></div>
@@ -165,7 +163,10 @@
                                             <!-- button start -->
                                             <div class="more-wraper-center more-wraper-center-home fadeIn-element">
                                                 <a data-lity="" href="FathersDayIntro.mp4">
-                                                    <div class="more-button-bg-center more-button-circle"></div>
+                                                    <div class="more-button-bg-center more-button-circle visible-xs" style="
+                                                    margin-top: 500px" ></div>
+                                                    <div class="more-button-bg-center more-button-circle hidden-xs" style="
+                                                    margin-top: -130px"></div>
                                                     <div class="more-button-txt-center">
                                                         <span>Watch Video</span>
                                                     </div>
